<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <!-- ========== 状态总览 ========== -->
    <PreferenceCategory android:title="@string/pref_category_runtime">
        <Preference
            android:key="runtime_status"
            android:title="@string/pref_runtime_status"
            android:summary="@string/pref_runtime_status_summary"
            android:icon="@drawable/ic_dashboard"
            android:selectable="false"/>

        <Preference
            android:key="log_output"
            android:title="@string/pref_log_output"
            android:summary="@string/pref_log_output_summary"
            android:icon="@drawable/ic_log"
            android:selectable="false"/>
    </PreferenceCategory>

    <!-- ========== 网络配置 ========== -->
    <PreferenceCategory android:title="@string/pref_category_network">
        <EditTextPreference
            android:key="ip_address"
            android:title="@string/pref_server_ip"
            android:dialogTitle="@string/pref_server_ip_dialog"
            android:icon="@drawable/ic_widgets"
            android:defaultValue="127.0.0.1"/>

        <EditTextPreference
            android:key="server_port"
            android:title="@string/pref_server_port"
            android:dialogTitle="@string/pref_server_port_dialog"
            android:icon="@drawable/ic_tune"
            android:inputType="number"
            android:defaultValue="9981"/>
    </PreferenceCategory>

    <!-- ========== 载荷注入 ========== -->
    <PreferenceCategory android:title="@string/pref_category_injection">
        <EditTextPreference
            android:key="command_input"
            android:title="@string/pref_command_input"
            android:dialogTitle="@string/pref_command_dialog"
            android:icon="@drawable/ic_bolt"
            android:defaultValue="id"/>

        <Preference
            android:key="app_selector"
            android:title="@string/pref_app_selector"
            android:summary="@string/pref_app_selector_summary"
            android:icon="@drawable/ic_apps_grid"/>

        <EditTextPreference
            android:key="setuid_input"
            android:title="@string/pref_uid_input"
            android:dialogTitle="@string/pref_uid_dialog"
            android:icon="@drawable/ic_shield_check"
            android:defaultValue="1000"/>

        <EditTextPreference
            android:key="setgid_input"
            android:title="@string/pref_gid_input"
            android:dialogTitle="@string/pref_gid_dialog"
            android:icon="@drawable/ic_shield_check"
            android:defaultValue="1000"/>

        <EditTextPreference
            android:key="setgroup_input"
            android:title="@string/pref_group_input"
            android:dialogTitle="@string/pref_group_dialog"
            android:icon="@drawable/ic_edit"/>

        <EditTextPreference
            android:key="setselinux_input"
            android:title="@string/pref_selinux_policy"
            android:summary="@string/pref_selinux_summary"
            android:icon="@drawable/ic_info"
            android:defaultValue="platform:privapp:targetSdkVersion=29:complete"
            android:dialogTitle="@string/pref_selinux_dialog"/>

        <EditTextPreference
            android:key="nice_name_input"
            android:title="@string/pref_nice_name"
            android:dialogTitle="@string/pref_nice_name_dialog"
            android:icon="@drawable/ic_edit"
            android:defaultValue="zYg0te"/>

        <ListPreference
            android:key="runtime_flags_list"
            android:title="@string/pref_runtime_flags"
            android:summary="@string/pref_runtime_flags_summary"
            android:dialogTitle="@string/pref_runtime_flags_dialog"
            android:icon="@drawable/ic_tune"
            android:entries="@array/runtime_flags_entries"
            android:entryValues="@array/runtime_flags_values"
            android:defaultValue="43267" />
    </PreferenceCategory>

    <!-- ========== 服务控制 ========== -->
    <PreferenceCategory android:title="@string/pref_category_server">
        <Preference
            android:key="start_server"
            android:title="@string/pref_start_server"
            android:summary="@string/pref_start_server_summary"
            android:icon="@drawable/ic_play"/>

        <Preference
            android:key="stop_server"
            android:title="@string/pref_stop_server"
            android:summary="@string/pref_stop_server_summary"
            android:icon="@drawable/ic_stop"
            android:enabled="false"/>
    </PreferenceCategory>

    <!-- ========== 工具入口 ========== -->
    <PreferenceCategory android:title="@string/pref_category_tools">
        <Preference
            android:key="terminal"
            android:title="@string/pref_terminal"
            android:summary="@string/pref_terminal_summary"
            android:icon="@drawable/ic_dashboard"/>

        <Preference
            android:key="execute_btn"
            android:title="@string/pref_execute_btn"
            android:summary="@string/pref_execute_summary"
            android:icon="@drawable/ic_bolt"/>
    </PreferenceCategory>

    <!-- ========== 高级选项 ========== -->
    <Preference
        android:key="advanced_trigger"
        android:title="@string/pref_advanced_trigger"
        android:summary="@string/pref_advanced_trigger_summary"
        android:icon="@drawable/ic_tune"/>

    <PreferenceCategory
        android:key="advanced_category"
        android:title="@string/pref_category_advanced"
        android:visible="true">

        <Preference
            android:key="shell_terminal"
            android:title="@string/pref_shell_terminal"
            android:summary="@string/pref_shell_terminal_summary"
            android:icon="@drawable/ic_play"/>

        <Preference
            android:key="top_data"
            android:title="@string/pref_extract_data"
            android:summary="@string/pref_extract_data_summary"
            android:icon="@drawable/ic_apps_grid"/>

        <Preference
            android:key="1312"
            android:title="@string/pref_android12_warning"
            android:summary="@string/pref_android12_warning_summary"
            android:icon="@drawable/ic_help"/>

        <EditTextPreference
            android:key="zyg1"
            android:dialogTitle="@string/pref_buffer_dialog"
            android:defaultValue="5000"
            android:title="@string/pref_buffer"
            android:icon="@drawable/ic_edit"/>

        <EditTextPreference
            android:key="zyg2"
            android:title="@string/pref_padding"
            android:defaultValue="3157"
            android:dialogTitle="@string/pref_padding_dialog"
            android:icon="@drawable/ic_edit"/>

        <EditTextPreference
            android:key="zyg3"
            android:title="@string/pref_padding2"
            android:defaultValue="4999"
            android:icon="@drawable/ic_edit"/>

        <MultiSelectListPreference
            android:key="multi_select_preference"
            android:title="@string/pref_zygote_config"
            android:summary="@string/pref_zygote_config_summary"
            android:dialogTitle="@string/pref_zygote_config_dialog"
            android:icon="@drawable/ic_widgets"
            android:entries="@array/multi_select_options"
            android:entryValues="@array/multi_select_values" />
    </PreferenceCategory>

</PreferenceScreen>